# fruit

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md
.cargo/: mutants.toml
.claude/: settings.local.json
command_line_service/: Cargo.toml
command_line_service/src/: main.rs  repl.rs
docs/: EventsAndEffects.md  SPEC.md
docs/spec/: Slack.md
domain/: Cargo.toml
domain/src/: bag.rs  bag_tests.rs  burner.rs  burner_tests.rs  community.rs  community_repo.rs  community_store.rs  community_store_tests.rs  community_tests.rs  effect.rs  error.rs  error_tests.rs  event.rs  event_log.rs  event_log_repo.rs  event_log_store.rs  event_log_store_tests.rs  event_log_tests.rs  fruit.rs  fruit_tests.rs  fruit_weights.rs  fruit_weights_tests.rs  gifter.rs  gifter_tests.rs  granter.rs  id.rs  lib.rs  luck_adjuster.rs  luck_adjuster_tests.rs  luck_adjustments.rs  luck_adjustments_tests.rs  member.rs  member_tests.rs  providence.rs  providence_tests.rs  random_granter.rs  random_granter_tests.rs  record.rs  repo.rs  store.rs
dynamo_db/: Cargo.toml  TODO.md
dynamo_db/src/: community_repo.rs  community_repo_tests.rs  dyanmo_sdk_anomaly.rs  dyanmo_sdk_anomaly_tests.rs  error.rs  error_tests.rs  event_log_repo.rs  event_log_repo_tests.rs  lib.rs
dynamo_db/src/dto/: community.rs  community_tests.rs  event.rs  event_tests.rs  mod.rs
dynamo_db/tests/: integration.rs
in_memory_db/: Cargo.toml
in_memory_db/src/: community_repo.rs  community_repo_tests.rs  error.rs  error_tests.rs  event_log.rs  event_log_repo.rs  event_log_repo_tests.rs  lib.rs
slack_service/: Cargo.toml
slack_service/src/: command.rs  command_tests.rs  error.rs  grant.rs  grant_tests.rs  identity.rs  identity_tests.rs  main.rs  notify.rs  payload.rs  verify.rs  verify_tests.rs
