[package]
name = "fruit-domain"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
regex = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[dependencies]
anomalies = "0.2.2"
async-trait = "0.1"
thiserror = "2"
bon = "2.3"
exn = "0.3.0"
newtype-ids = "0.1"
newtype-ids-uuid = "0.1"
rand = "0.8"
uuid = { version = "=1.11.0", features = ["v4"] }
auto_impl = "1.3.0"
