[package]
name = "fruit-in-memory-db"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
regex = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[dependencies]
anomalies = "0.2.2"
async-trait = "0.1"
thiserror = "2"
exn = "0.3.0"
fruit-domain = { path = "../domain" }
newtype-ids = "0.1"
newtype-ids-uuid = "0.1"