[package]
name = "fruit-slack-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
aws-config = "1"
aws-sdk-dynamodb = "1"
exn = "0.3.0"
fruit-domain = { path = "../domain" }
fruit-dynamo-db = { path = "../dynamo_db" }
hex = "0.4"
hmac = "0.12"
lambda_http = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "=1.11.0", features = ["v5"] }
