[package]
name = "fruit-slack-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
anomalies = "0.2.2"
aws-config = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-sdk-dynamodb = "1"
exn = "0.3.0"
fruit-domain = { path = "../domain" }
fruit-dynamo-db = { path = "../dynamo_db" }
hex = "0.4"
hmac = "0.12"
lambda_http = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "=1.11.0", features = ["v5"] }

[dev-dependencies]
fruit-in-memory-db = { path = "../in_memory_db" }
